objects/ssot__ConstituentRole__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContextRecordId__c</fullName>
        <label>Context Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContextRecordObject__c</fullName>
        <label>Context Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DescriptionText__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Constituent Role Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonId__c</fullName>
        <label>Person</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RoleType__c</fullName>
        <label>Role Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819892708_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConstituentRole_ContextRecordId_map__rel</label>
        <referenceTo>ssot__Learning__dlm</referenceTo>
        <relationshipLabel>ConstituentRole_ContextRecordId_map__rel</relationshipLabel>
        <relationshipName>rel_1719819892708_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291141255_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConstituentRole_PersonId_map_Individ_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ConstituentRole_PersonId_map_Individ_rel</relationshipLabel>
        <relationshipName>rel_1720291141255_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>